yoshimi 1.5.10 M

2019-1-23 Will
* Removed all remaining mutex references.
  Already almost entirely commented out.

2019-1-22 Will
* BugFix: missing 'else' so CLI filter not seeing L1/H1.
* Implemented loading MIDI learn fro CLI.
  Currently it seems you can only set one command line
  argument. Observed priority is .state .xmz .xiz .xly
  Need to see if this can be made recursive.
* Minor adustments to startup handover.

2019-1-20 Will
* Sending SIGUSR2 to running Yoshimi starts new instance.
* Yoshimi hands over startup if there's a running instance.

2019-1-13 Will
* Confirmed previous fix and set release as 1.5.10.1

2019-1-12 Rob, Will, Hermann
* BugFix: Changes to CMakeLists.txt failed fedora build.
  Directly setting CMAKE_CXX_FLAGS overwrote previously
  defined flags the distro package required. We now add
  our settings as a prefix to existing CMAKE_CXX_FLAGS
  so the distro values take priority.
* Changed Examples/synth_prelude files to link to original.
  Done to avoid possible licensing issues.
* Added new warning file to dev_notes about spelling errors.
* Set bugfix release as 1.5.10.1 rc1

2019-1-6 Will
* Modified 'main' to remove stand-alone/LV2 build contention.
* Bank.h, Config.h, Config.cpp no longer different builds.
* Added warning about XML names in dev_notes.

2019-1-3 Will
* Fixed regression - Resonance deactivated 'Close' button.
* Added 'Multi Rushes' instrument to 'Will Godfrey Collection'.
* Corrected some file dates.
* Final updates to docs.
* Set release version as 1.5.10

2019-1-2 Hermann
* Refactored the PRNG code into a class.
* Extracted the source code of the random_r() function
  from C standard lib, which Yoshimi relied on previously.
* Simplified and adapted this code to our usage, verified
  it produces exactly the same random numbers as Glibc 2.24
* re-integrated all further float->int optimisations done
  by Will while reworking the PRNGs.

2018-12-22 Will
* Frequency LFO regresion fix from Rob.
* Set version as 1.5.10 rc3
