@@ -1,7 +1,7 @@
 
-BUG! Multi instances produce jack errors when main instance closed, even if they have been closed first - been there since V 1.4.1 :(
-
 BUG! If jack is selected for audio but there are no physical ports Yoshimi quits with CLI warning - should run with gui warning as well, or better still loop back to try alsa.
+
+Minor bug Multi instances produce jack error reports when main instance closed, even if they have been closed first - been there since V 1.4.1 :(
 
 Revise GUI voice list related to voice editor.
 
@@ -31,7 +31,7 @@ Do a dual scan for banks so that IDd ones are found first, then any new ones pic
 Pasting effect doesn't update effect title.
 
 Requested: revise window states so engines etc can be made auto open.
-May not be practical as engines will depend on parts loated.
+May not be practical as engines will depend on parts loaded.
 
 Expand MIDI-learn to include:
     learn groups
@@ -49,7 +49,7 @@ Startup state load doesn't set buffersize correctly - partially resolved. Size i
 
 Allow headless compilation.
 
-Make things like Echo delay either floats or much higher resolution.
+Make stored values of things like Echo delay 32 bit unsigned integers.
 
 Consider enabling and disabling tooltips.
 
