@@ -1,7 +1,7 @@
 /*
     globals.h - general static definitions
 
-    Copyright 2018, Will Godfrey
+    Copyright 2018-2019, Will Godfrey
 
     This file is part of yoshimi, which is free software: you can redistribute
     it and/or modify it under the terms of the GNU Library General Public
@@ -17,7 +17,7 @@
     yoshimi; if not, write to the Free Software Foundation, Inc., 51 Franklin
     Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
-    Created June 2018
+    Modifed January 2019
 */
 
 #ifndef GLOBALS_H
@@ -36,14 +36,6 @@
 #define TWOPI 6.28318530718f
 #define HALFPI 1.57079632679f
 #define LOG_2 0.693147181f
-
-// float round to zero to integer
-// the second version is faster but for positive values only
-// and not fully confirmed as correct
-
-#define FR2Z2I(f, i) (i) = ((f > 0) ? (int(trunc(f))) : (int(trunc(f - 1.0f))));
-//#define FR2Z2I(f, i) (i) = (int (f));
-
 
 // many of the following are for convenience and consistency
 // changing them is likely to have unpredicable consequences
